Lab/Lab1/.metadata/.plugins/org.eclipse.cdt.ui/Lab5.build.log
16:18:55 **** Incremental Build of configuration Debug for project Lab5 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:113:47: error: 'str' undeclared (first use in this function)
  113 |            HAL_UART_Transmit(&huart2, (void *)str, sprintf(str, "%d\n", ADC_value), 1000);
      |                                               ^~~
../Core/Src/main.c:113:47: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:113:52: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
  113 |            HAL_UART_Transmit(&huart2, (void *)str, sprintf(str, "%d\n", ADC_value), 1000);
      |                                                    ^~~~~~~
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'sprintf'
   20 | #include "main.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c:113:52: warning: incompatible implicit declaration of built-in function 'sprintf' [-Wbuiltin-declaration-mismatch]
  113 |            HAL_UART_Transmit(&huart2, (void *)str, sprintf(str, "%d\n", ADC_value), 1000);
      |                                                    ^~~~~~~
../Core/Src/main.c:113:52: note: include '<stdio.h>' or provide a declaration of 'sprintf'
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:18:55 Build Failed. 2 errors, 2 warnings. (took 443ms)

